Fix layout issues

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,9 +1,12 @@
 :host {
+    flex: 1 1 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
     gap: 40px;
+
 }
 
 .card-container {
