--- a/src/app/certs/certs.component.scss
+++ b/src/app/certs/certs.component.scss
@@ -8,7 +8,7 @@
 
 
 .container {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: stretch;
@@ -16,9 +16,9 @@
     gap: 20px;
 
     > * {
-        flex: 1 1 calc(50% - 25px);
+        flex: 1 1 calc(50% - 10px);
         min-width: 150px;
-        max-width: calc(50% - 25px);
+        max-width: calc(50% - 10px);
         @media only screen and (max-width: 600px) {
             min-width: 100%;
             max-width: 100%;
